--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Abel");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i");
 .graphicTest {
   grid-column: 1 / -1;
   grid-row: 10 / 15;
@@ -15,88 +16,102 @@
   transition: opacity .5s ease-in; }
 
 .fadeIn {
-  -webkit-animation: fadeIn;
-  animation: fadeIn; }
+  -webkit-animation: fadeIn 1s;
+  -moz-animation: fadeIn 1s;
+  -o-animation: fadeIn 1s;
+  animation: fadeIn 1s; }
 
 @-webkit-keyframes fadeIn {
-  0% {
+  from {
     opacity: 0; }
-  100% {
+  to {
+    opacity: 1; } }
+@-moz-keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@-o-keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
     opacity: 1; } }
 @keyframes fadeIn {
-  0% {
+  from {
     opacity: 0; }
-  100% {
+  to {
     opacity: 1; } }
 .fadeOut {
-  -webkit-animation: fadeOut;
-  animation: fadeOut; }
+  -webkit-animation: fadeOut 1s;
+  -moz-animation: fadeOut 1s;
+  -o-animation: fadeOut 1s;
+  animation: fadeOut 1s; }
 
 @-webkit-keyframes fadeOut {
-  100% {
+  from {
     opacity: 1; }
-  0% {
+  to {
+    opacity: 0; } }
+@-moz-keyframes fadeOut {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
+@-o-keyframes fadeOut {
+  from {
+    opacity: 1; }
+  to {
     opacity: 0; } }
 @keyframes fadeOut {
-  100% {
+  from {
     opacity: 1; }
-  0% {
+  to {
     opacity: 0; } }
 * {
-  font-family: "Roboto Slab";
-  font-weight: 400;
+  font-family: "Lato";
   color: black; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none;
+  color: #C0C0C0; }
   a:hover {
-    color: #FF4225; }
+    color: black; }
 
 html {
   height: 100%;
-  width: 100%; }
+  width: 100%;
+  overflow-x: hidden; }
 
 body {
-  background-color: #F9F9F9;
+  background-color: white;
   height: 100%;
   width: 100%;
-  /*display: flex;
-  flex-direction: column;*/
-  /*display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 100px 1fr 80px;
-  grid-template-areas: 'nav' 'main' 'footer';
-  grid-gap: 150px;
-  padding: 10px;
-*/ }
+  overflow-x: hidden; }
 
 nav {
-  /*grid-area: nav;*/
   display: flex;
   align-items: center;
   justify-content: space-around;
   flex-direction: row;
-  height: 30vh;
+  height: 10vh;
   font-size: 100%; }
 
 .homeActive {
-  color: #FF4225; }
+  color: black; }
 
 .aboutActive {
-  color: #FF4225; }
+  color: black; }
 
 .contactActive {
-  color: #FF4225; }
+  color: black; }
 
 main {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-  grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
-  grid-auto-columns: 25px;
-  grid-auto-rows: 25px;
-  grid-auto-flow: dense; }
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: 1fr; }
 
 footer {
+  height: 40vh;
   text-align: center;
   display: flex;
   justify-content: center;
@@ -106,13 +121,14 @@ footer {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  grid-column: 10/ -10;
-  grid-row: 6/ 11;
-  font-size: 125%; }
+  grid-column: 3/ 11;
+  grid-row: 7/ 11;
+  font-size: 175%;
+  font-weight: 700; }
 
 .home-row1 {
-  grid-column: 5 / -5;
-  grid-row: 23 / 36;
+  grid-column: 2 / -2;
+  grid-row: 19 / 27;
   display: flex;
   justify-content: space-around; }
   .home-row1 img {
@@ -122,18 +138,17 @@ footer {
       opacity: .5; }
 
 .home-name-row1 {
-  grid-column: 5 / -5;
-  grid-row: 23 / 33;
+  grid-column: 2 / -2;
+  grid-row: 19 / 27;
   display: flex;
   justify-content: space-around;
   align-items: center; }
 
 .home-row2 {
-  grid-column: 5 / -5;
-  grid-row: 43 / 55;
+  grid-column: 2 / -2;
+  grid-row: 29/ 37;
   display: flex;
-  justify-content: space-around;
-  background-color: #FF4225; }
+  justify-content: space-around; }
   .home-row2 img {
     width: 20em;
     height: 20em; }
@@ -141,67 +156,53 @@ footer {
       opacity: .5; }
 
 .home-name-row2 {
-  grid-column: 5 / -5;
-  grid-row: 43 / 53;
+  grid-column: 2 / -2;
+  grid-row: 29/ 37;
   display: flex;
   justify-content: space-around;
   align-items: center; }
 
-.p1 {
-  background-color: #FF8866;
-  grid-column: 5/ -5;
-  grid-row: 5 / 7;
+.aboutParagraph {
+  display: flex;
+  flex-direction: column;
+  grid-column: 7 / 12;
+  grid-row: 3 / 9;
   font-size: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between; }
-
-.p2 {
-  background-color: #FF8866;
-  grid-column: 20/ -20;
-  grid-row: 15 / 20;
-  font-size: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between; }
-
-.p3 {
-  grid-column: 20/ -20;
-  grid-row: 30 / 35;
-  font-size: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between; }
-
-.p4 {
-  grid-column: 20/ -20;
-  grid-row: 40 / 45;
-  font-size: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between; }
+  .aboutParagraph #firstP {
+    font-weight: 700; }
 
 .aboutImg1 {
-  grid-column: 15 / 20;
-  grid-row: 10 / 15; }
+  display: flex;
+  justify-content: center;
+  grid-column: 2 / 7;
+  grid-row: 3 / 9; }
   .aboutImg1 img {
-    height: 15em;
-    width: 15em; }
+    height: 25em;
+    width: 25em; }
 
 .contactParagraph {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  grid-column: 20/ -20;
-  background-color: #FF8866;
-  grid-row: 10/ 19;
-  font-size: 125%; }
+  justify-content: center;
+  grid-column: 3/ 11;
+  grid-row: 10/ 14;
+  font-size: 170%;
+  font-weight: 700; }
 
-.contactImage {
-  background-color: #FF8866;
+.contactIcons {
   display: flex;
-  grid-column: 20 / 25;
-  grid-row: 25 / 30; }
+  justify-content: space-around;
+  grid-column: 3 / -3;
+  grid-row: 19 / 25; }
+  .contactIcons img {
+    opacity: .5;
+    height: 5em;
+    width: 5em; }
+    .contactIcons img:hover {
+      opacity: 1; }
 
 .webProjects {
   grid-column-start: 4;
@@ -214,6 +215,27 @@ footer {
     width: 17em;
     height: 17em; }
 
+/*.grid-checker {
+  border: solid grey;
+  background: transparent;
+  display: grid;
+  grid-auto-rows: minmax(5%, 1fr);
+  left: 0;
+  height: 50vh;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 10;
+
+  div {
+    background: #000;
+    margin: 0;
+    opacity: 0.1;
+    width: 100%;
+  }
+
+}*/
 .item {
   background-color: grey; }
 
