--- a/stylesheets/_App.scss
+++ b/stylesheets/_App.scss
@@ -2,11 +2,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Abel');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i');
 
 
 
 //font
-$font-family: 'Roboto Slab';
+$font-family: 'Lato';
 $font-light: 100;
 $font-medium: 300;
 $font-regular: 400;
@@ -19,6 +20,7 @@ $red: #FF4225;
 $dark: #B21F1E;
 $petal: #FF8866;
 $green: #80BD9E;
+$grey: #C0C0C0;
 
 
 .graphicTest {
@@ -43,46 +45,72 @@ $green: #80BD9E;
 //fade in body // doesn't work right now lol
 
 .fadeIn {
-  -webkit-animation: fadeIn;
-  animation: fadeIn;
+  -webkit-animation: fadeIn 1s;
+  -moz-animation: fadeIn 1s;
+  -o-animation: fadeIn 1s;
+  animation: fadeIn 1s;
 }
 
 @-webkit-keyframes fadeIn {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@-moz-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@-o-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
 }
 
 @keyframes fadeIn {
-  0% {opacity: 0;}
-  100% {opacity: 1;}
+  from {opacity: 0;}
+  to {opacity: 1;}
 }
 
+
+
 .fadeOut {
-  -webkit-animation: fadeOut;
-  animation: fadeOut;
+  -webkit-animation: fadeOut 1s;
+  -moz-animation: fadeOut 1s;
+  -o-animation: fadeOut 1s;
+  animation: fadeOut 1s;
 }
 
 @-webkit-keyframes fadeOut {
-  100% {opacity: 1;}
-  0% {opacity: 0;}
+  from {opacity: 1;}
+  to {opacity: 0;}
+}
+
+@-moz-keyframes fadeOut {
+  from {opacity: 1;}
+  to {opacity: 0;}
+}
+
+@-o-keyframes fadeOut {
+  from {opacity: 1;}
+  to {opacity: 0;}
 }
 
 @keyframes fadeOut {
-  100% {opacity: 1;}
-  0% {opacity: 0;}
+  from {opacity: 1;}
+  to {opacity: 0;}
 }
 
 
 * {
   font-family: $font-family;
-  font-weight: $font-regular;
   color: $font-color;
 }
 
 a {
   text-decoration: none;
+  color: $grey;
     &:hover {
-      color: $red;
+      color: $font-color;
     }
 }
 
@@ -90,81 +118,67 @@ a {
 html {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 
 body {
-  background-color: #F9F9F9;
+  background-color: white;
   height: 100%;
   width:100%;
-
-  /*display: flex;
-  flex-direction: column;*/
-
-  /*display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 100px 1fr 80px;
-  grid-template-areas: 'nav' 'main' 'footer';
-  grid-gap: 150px;
-  padding: 10px;
-*/
+  overflow-x: hidden;
 }
 
   nav {
-      /*grid-area: nav;*/
       display: flex;
       align-items: center;
       justify-content: space-around;
       flex-direction: row;
-      height: 30vh;
+      height: 10vh;
       font-size: 100%;
     }
 
       .homeActive {
-        color: $red;
+        color: $font-color;
       }
 
       .aboutActive {
-        color: $red;
+        color: $font-color;
       }
 
       .contactActive {
-        color: $red;
+        color: $font-color;
       }
 
     main {
-      // grid-area: main;
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
-      grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));
-      grid-auto-columns: 25px;
-      grid-auto-rows: 25px;
-      grid-auto-flow: dense;
+      grid-template-columns: repeat(12, 1fr);
+      grid-auto-rows: 1fr;
+
     }
 
 
     footer {
-      // grid-area: footer;
-      // grid-row-start: 3;
-      // grid-row-end: 5;
+      height: 40vh;
       text-align: center;
       display: flex;
       justify-content: center;
       align-items: flex-end;
     }
 
-      //home page
+      //home page -------------------------------------
       .home-intro {
         display: flex;
         align-items: center;
         justify-content: space-between;
-        grid-column: 10/ -10;
-        grid-row: 6/ 11;
-        font-size: 125%;
+        grid-column: 3/ 11;
+        grid-row: 7/ 11;
+        font-size: 175%;
+        font-weight: $font-bold;
       }
 
       .home-row1 {
-        grid-column: 5 / -5;
-        grid-row: 23 / 36;
+        grid-column: 2 / -2;
+        grid-row: 19 / 27;
         display: flex;
         justify-content: space-around;
           img {
@@ -177,19 +191,18 @@ body {
         }
 
       .home-name-row1 {
-        grid-column: 5 / -5;
-        grid-row: 23 / 33;
+        grid-column: 2 / -2;
+        grid-row: 19 / 27;
         display: flex;
         justify-content: space-around;
         align-items: center;
       }
 
       .home-row2 {
-        grid-column: 5 / -5;
-        grid-row: 43 / 55;
+        grid-column: 2 / -2;
+        grid-row: 29/ 37;
         display: flex;
         justify-content: space-around;
-        background-color: $red;
           img {
             width: 20em;
             height: 20em;
@@ -200,80 +213,69 @@ body {
         }
 
         .home-name-row2 {
-          grid-column: 5 / -5;
-          grid-row: 43 / 53;
+          grid-column: 2 / -2;
+          grid-row: 29/ 37;
           display: flex;
           justify-content: space-around;
           align-items: center;
         }
 
 
-        //about page
-        .p1 {
-          background-color: $petal;
-          grid-column: 5/ -5;
-          grid-row: 5 / 7;
+        //about page -------------------------------------
+        .aboutParagraph {
+          display: flex;
+          flex-direction: column;
+          grid-column: 7 / 12;
+          grid-row: 3 / 9;
           font-size: 100%;
           display: flex;
           align-items: center;
           justify-content: space-between;
-        }
-
-        .p2 {
-          background-color: $petal;
-          grid-column: 20/ -20;
-          grid-row: 15 / 20;
-          font-size: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-        }
-
-        .p3 {
-          grid-column: 20/ -20;
-          grid-row: 30 / 35;
-          font-size: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-        }
-
-        .p4 {
-          grid-column: 20/ -20;
-          grid-row: 40 / 45;
-          font-size: 100%;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
+          #firstP {
+            font-weight: $font-bold;
+          }
         }
 
         .aboutImg1 {
+
+          display: flex;
+          justify-content: center;
           img {
-            height: 15em;
-            width: 15em;
+            height: 25em;
+            width: 25em;
           }
-          grid-column: 15 / 20;
-          grid-row: 10 / 15;
+          grid-column: 2 / 7;
+          grid-row: 3 / 9;
 
         }
 
-        //contact page
+
+        //contact page -------------------------------------
 
         .contactParagraph {
           display: flex;
           align-items: center;
-          justify-content: space-between;
-          grid-column: 20/ -20;
-          background-color: $petal;
-          grid-row: 10/ 19;
-          font-size: 125%;
+          justify-content: center;
+          grid-column: 3/ 11;
+          grid-row: 10/ 14;
+          font-size: 170%;
+          font-weight: $font-bold;
         }
 
-        .contactImage {
-          background-color: $petal;
+        .contactIcons {
           display: flex;
-          grid-column: 20 / 25;
-          grid-row: 25 / 30;
+          justify-content: space-around;
+          grid-column: 3 / -3;
+          grid-row: 19 / 25;
+            img {
+              opacity: .5;
+              height: 5em;
+              width: 5em;
+
+              &:hover {
+                opacity: 1;
+              }
+            }
         }
 
 
@@ -291,13 +293,37 @@ body {
       }
 
 
+  //grid checker
+/*.grid-checker {
+  border: solid grey;
+  background: transparent;
+  display: grid;
+  grid-auto-rows: minmax(5%, 1fr);
+  left: 0;
+  height: 50vh;
+  padding: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 10;
+
+  div {
+    background: #000;
+    margin: 0;
+    opacity: 0.1;
+    width: 100%;
+  }
+
+}*/
+
+
+
 
 //responsiveness -------------------------------------
 
 //large tablet
 @media only screen and (max-width: 960px) {
 }
-
 
 //medium tablet
 @media only screen and (max-width: 760px) {
