Add burger menu.

--- a/stylesheets/sass/app.scss
+++ b/stylesheets/sass/app.scss
@@ -1,171 +1,13 @@
 
 
-@import url('https://fonts.googleapis.com/css?family=Abel');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
-@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i');
+@import 'partials/vars';
+@import 'partials/mixins';
+@import 'partials/about';
+@import 'partials/work';
+@import 'partials/header_body_footer';
+@import 'partials/animation';
 
-
-
-//font
-$font-family: 'Lato';
-$font-light: 100;
-$font-medium: 300;
-$font-regular: 400;
-$font-bold: 700;
-$font-color: black;
-
-//color palette
-$beige: #FCE7E4;
-$red: #FF4225;
-$dark: #B21F1E;
-$petal: #FF8866;
-$green: #80BD9E;
-$grey: #C0C0C0;
-
-
-.graphicTest {
-  grid-column: 1 / -1;
-  grid-row: 10 / 15;
-  background-color: $petal;
-  display: flex;
-  justify-content: center;
-}
-
-//on page load
-
-.bodyFadeIn-appear {
-  opacity: 0.01;
-}
-
-.bodyFadeIn-appear.bodyFadeIn-appear-active {
-  opacity: 1;
-  transition: opacity .5s ease-in;
-}
-
-//fade in body // doesn't work right now lol
-
-.fadeIn {
-  -webkit-animation: fadeIn 1s;
-  -moz-animation: fadeIn 1s;
-  -o-animation: fadeIn 1s;
-  animation: fadeIn 1s;
-}
-
-@-webkit-keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-@-moz-keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-@-o-keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-
-
-.fadeOut {
-  -webkit-animation: fadeOut 1s;
-  -moz-animation: fadeOut 1s;
-  -o-animation: fadeOut 1s;
-  animation: fadeOut 1s;
-}
-
-@-webkit-keyframes fadeOut {
-  from {opacity: 1;}
-  to {opacity: 0;}
-}
-
-@-moz-keyframes fadeOut {
-  from {opacity: 1;}
-  to {opacity: 0;}
-}
-
-@-o-keyframes fadeOut {
-  from {opacity: 1;}
-  to {opacity: 0;}
-}
-
-@keyframes fadeOut {
-  from {opacity: 1;}
-  to {opacity: 0;}
-}
-
-
-* {
-  font-family: $font-family;
-  color: $font-color;
-}
-
-a {
-  text-decoration: none;
-  color: $grey;
-    &:hover {
-      color: $font-color;
-    }
-}
-
-
-html {
-  height: 100%;
-  width: 100%;
-  overflow-x: hidden;
-}
-
-body {
-  background-color: white;
-  height: 100%;
-  width:100%;
-  overflow-x: hidden;
-}
-
-  nav {
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      flex-direction: row;
-      height: 10vh;
-      font-size: 100%;
-    }
-
-      .homeActive {
-        color: $font-color;
-      }
-
-      .aboutActive {
-        color: $font-color;
-      }
-
-      .contactActive {
-        color: $font-color;
-      }
-
-    main {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-auto-rows: 1fr;
-
-    }
-
-
-    footer {
-      height: 40vh;
-      text-align: center;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-    }
-
-      //home page -------------------------------------
+//home page -------------------------------------
       .home-intro {
         display: flex;
         align-items: center;
@@ -320,8 +162,6 @@ body {
 
 
 //responsiveness -------------------------------------
-
-
 
 
 .item {
