--- a/stylesheets/css/app.css
+++ b/stylesheets/css/app.css
@@ -1,75 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Abel");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i");
-.graphicTest {
-  grid-column: 1 / -1;
-  grid-row: 10 / 15;
-  background-color: #FF8866;
-  display: flex;
-  justify-content: center; }
-
-.bodyFadeIn-appear {
-  opacity: 0.01; }
-
-.bodyFadeIn-appear.bodyFadeIn-appear-active {
-  opacity: 1;
-  transition: opacity .5s ease-in; }
-
-.fadeIn {
-  -webkit-animation: fadeIn 1s;
-  -moz-animation: fadeIn 1s;
-  -o-animation: fadeIn 1s;
-  animation: fadeIn 1s; }
-
-@-webkit-keyframes fadeIn {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
-@-moz-keyframes fadeIn {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
-@-o-keyframes fadeIn {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
-@keyframes fadeIn {
-  from {
-    opacity: 0; }
-  to {
-    opacity: 1; } }
-.fadeOut {
-  -webkit-animation: fadeOut 1s;
-  -moz-animation: fadeOut 1s;
-  -o-animation: fadeOut 1s;
-  animation: fadeOut 1s; }
-
-@-webkit-keyframes fadeOut {
-  from {
-    opacity: 1; }
-  to {
-    opacity: 0; } }
-@-moz-keyframes fadeOut {
-  from {
-    opacity: 1; }
-  to {
-    opacity: 0; } }
-@-o-keyframes fadeOut {
-  from {
-    opacity: 1; }
-  to {
-    opacity: 0; } }
-@keyframes fadeOut {
-  from {
-    opacity: 1; }
-  to {
-    opacity: 0; } }
 * {
-  font-family: "Lato";
-  color: black; }
+  font-family: "Lato"; }
 
 a {
   text-decoration: none;
@@ -77,33 +10,127 @@ a {
   a:hover {
     color: black; }
 
-html {
-  height: 100%;
-  width: 100%;
-  overflow-x: hidden; }
-
-body {
+html, body {
   background-color: white;
   height: 100%;
   width: 100%;
-  overflow-x: hidden; }
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0; }
 
 nav {
   display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: row;
-  height: 10vh;
-  font-size: 100%; }
+  justify-content: center;
+  margin: 0px; }
 
 .homeActive {
   color: black; }
 
 .aboutActive {
+  display: none;
   color: black; }
 
-.contactActive {
-  color: black; }
+.myNameDesktop {
+  display: none; }
+  @media (min-width: 650px) {
+    .myNameDesktop {
+      display: flex; } }
+
+.myNameMobile {
+  margin: 22px auto;
+  font-size: 23px; }
+  @media (min-width: 650px) {
+    .myNameMobile {
+      display: none; } }
+
+@media (min-width: 650px) {
+  input {
+    display: none; } }
+
+input + label {
+  height: 20px;
+  position: fixed;
+  right: 30px;
+  top: 25px;
+  width: 15px;
+  z-index: 4; }
+  @media (min-width: 650px) {
+    input + label {
+      display: none; } }
+  input + label span {
+    background: black;
+    height: 2px;
+    left: 0;
+    position: absolute;
+    top: 50%;
+    transition: .5s;
+    width: 100%; }
+  input + label span:first-child {
+    top: 5px; }
+  input + label span:last-child {
+    top: 15px; }
+
+label:hover {
+  opacity: .35; }
+
+input:checked + label span {
+  opacity: 0;
+  top: 50%; }
+input:checked + label span:first-child {
+  opacity: 1;
+  transform: rotate(405deg); }
+input:checked + label span:last-child {
+  opacity: 1;
+  transform: rotate(-405deg); }
+
+input ~ nav {
+  background: white;
+  height: 50px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: .5s;
+  transition-delay: .5s;
+  z-index: 3; }
+  input ~ nav > ul {
+    text-align: center;
+    position: absolute;
+    top: 25%;
+    left: 20%;
+    right: 20%;
+    padding: 0; }
+    @media (min-width: 650px) {
+      input ~ nav > ul {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between; } }
+    input ~ nav > ul > li {
+      list-style-type: none;
+      opacity: 0;
+      transition: .3s;
+      transition-delay: 0s; }
+      @media (min-width: 650px) {
+        input ~ nav > ul > li {
+          opacity: 1; } }
+      input ~ nav > ul > li > a {
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 20px;
+        color: black;
+        font-weight: 700;
+        display: block;
+        padding: 30px; }
+        input ~ nav > ul > li > a:hover {
+          opacity: .35; }
+
+input:checked ~ nav {
+  height: 100%;
+  transition-delay: 0s; }
+  input:checked ~ nav > ul > li {
+    opacity: 1;
+    transition-delay: .5s; }
 
 main {
   display: grid;
@@ -112,10 +139,10 @@ main {
 
 footer {
   height: 40vh;
-  text-align: center;
   display: flex;
   justify-content: center;
-  align-items: flex-end; }
+  align-items: flex-end;
+  margin-bottom: 50px; }
 
 .home-intro {
   display: flex;
@@ -239,4 +266,4 @@ footer {
 .item {
   background-color: grey; }
 
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=app.css.map */
