--- a/stylesheets/sass/partials/_vars.scss
+++ b/stylesheets/sass/partials/_vars.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Abel');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i');
+
 //font
 $font-family: 'Lato';
 $font-light: 100;
@@ -18,6 +22,7 @@ $grey: #C0C0C0;
 //media queries variables
 $sm: 0; //Small screen / phone
 $ph: 401px; // Phablet / in between mobile and tablet
+$pm: 650px; //in between phablet and tablet
 $md: 769px; // Medium screen / tablet
 $sl: 990px; // Semi-large / in between tablet and desktop
 $lg: 1100px; // Large screen / desktop
