--- a/stylesheets/css/app.css
+++ b/stylesheets/css/app.css
@@ -1,15 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Abel");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i");
-* {
-  font-family: "Lato"; }
-
-a {
-  text-decoration: none;
-  color: #C0C0C0; }
-  a:hover {
-    color: black; }
-
 html, body {
   background-color: white;
   height: 100%;
@@ -18,17 +9,21 @@ html, body {
   margin: 0;
   padding: 0; }
 
-nav {
-  display: flex;
-  justify-content: center;
-  margin: 0px; }
+* {
+  font-family: "Lato"; }
+
+a {
+  color: #C0C0C0;
+  text-decoration: none; }
+  a:hover {
+    color: black; }
 
 .homeActive {
   color: black; }
 
 .aboutActive {
-  display: none;
-  color: black; }
+  color: black;
+  display: none; }
 
 .myNameDesktop {
   display: none; }
@@ -37,8 +32,9 @@ nav {
       display: flex; } }
 
 .myNameMobile {
+  font-size: 23px;
   margin: 22px auto;
-  font-size: 23px; }
+  text-align: center; }
   @media (min-width: 650px) {
     .myNameMobile {
       display: none; } }
@@ -93,6 +89,17 @@ input ~ nav {
   transition: .5s;
   transition-delay: .5s;
   z-index: 3; }
+  @media (min-width: 650px) {
+    input ~ nav .desktopMenu {
+      align-items: center;
+      display: flex;
+      justify-content: space-between; } }
+  input ~ nav .desktopMenu a {
+    display: none;
+    margin: 0 40px; }
+    @media (min-width: 650px) {
+      input ~ nav .desktopMenu a {
+        display: flex; } }
   input ~ nav > ul {
     text-align: center;
     position: absolute;
@@ -102,10 +109,7 @@ input ~ nav {
     padding: 0; }
     @media (min-width: 650px) {
       input ~ nav > ul {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between; } }
+        display: none; } }
     input ~ nav > ul > li {
       list-style-type: none;
       opacity: 0;
