--- a/stylesheets/sass/partials/_header_body_footer.scss
+++ b/stylesheets/sass/partials/_header_body_footer.scss
@@ -1,15 +1,3 @@
-* {
-  font-family: $font-family;
-}
-
-a {
-  text-decoration: none;
-  color: $grey;
-    &:hover {
-      color: $font-color;
-    }
-}
-
 html, body {
   background-color: white;
   height: 100%;
@@ -19,158 +7,170 @@ html, body {
   padding: 0;
 }
 
-  nav {
-      // @include pm {
-      //   align-items: center;
-      //   justify-content: space-between;
-      //   margin: 10px 40px;
-      // }
-      display: flex;
-      justify-content: center;
-      margin: 0px;
+* {
+  font-family: $font-family;
+}
+
+//menu hover desktop
+a {
+  color: $grey;
+  text-decoration: none;
+    &:hover {
+      color: $font-color;
     }
-      .homeActive {
-        color: $font-color;
-      }
+}
 
-      .aboutActive {
-        display: none;
-        color: $font-color;
-      }
+//menu active desktop
+.homeActive {
+  color: $font-color;
+}
+.aboutActive {
+  color: $font-color;
+  display: none;
+}
 
-    .myNameDesktop {
-      display: none;
+//name on desktop vs. mobile
+.myNameDesktop {
+  @include pm {display: flex}
+  display: none;
+}
+
+.myNameMobile {
+  @include pm {display: none;}
+  font-size: 23px;
+  margin: 22px auto;
+  text-align: center;
+}
+
+//location and size of hamburger menu
+input {
+  @include pm {display:none}
+}
+input + label {
+  @include pm {display: none;}
+  height: 20px;
+  position: fixed;
+  right: 30px;
+  top: 25px;
+  width: 15px;
+  z-index: 4;
+  span {
+    background: black;
+    height: 2px;
+    left: 0;
+    position: absolute;
+    top: 50%;
+    transition: .5s;
+    width: 100%;
+  }
+  span:first-child {
+    top: 5px;
+  }
+  span:last-child {
+    top: 15px;
+  }
+}
+
+// hamburger on hover
+label:hover {
+  opacity: .35;
+}
+
+//hamburger when checked
+input:checked + label {
+  span {
+    opacity: 0;
+    top: 50%;
+  }
+  span:first-child {
+    opacity: 1;
+    transform: rotate(405deg);
+  }
+  span:last-child {
+    opacity: 1;
+    transform: rotate(-405deg);
+  }
+}
+
+//nav when opened
+input ~ nav {
+  .desktopMenu {
+    @include pm {
+      align-items: center;
+      display: flex;
+      justify-content: space-between;
+    }
+    a {
       @include pm {display: flex}
+      display: none;
+      margin: 0 40px;
     }
-
-    .myNameMobile {
-      margin: 22px auto;
-      font-size: 23px;
+  }
+  background: white;
+  height: 50px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: .5s;
+  transition-delay: .5s;
+  z-index: 3;
+  > ul {
       @include pm {display: none;}
-    }
-
-    //location and size of checkbox
-    input {
-      @include pm {display:none}
-    }
-    input + label {
-      @include pm {display: none;}
-      height: 20px;
-      position: fixed;
-      right: 30px;
-      top: 25px;
-      width: 15px;
-      z-index: 4;
-      span {
-        background: black;
-        height: 2px;
-        left: 0;
-        position: absolute;
-        top: 50%;
-        transition: .5s;
-        width: 100%;
-      }
-      span:first-child {
-        top: 5px;
-      }
-      span:last-child {
-        top: 15px;
-      }
-    }
-
-    // hamburger on hover
-    label:hover {
-      opacity: .35;
-    }
-
-    //hamburger when checked
-    input:checked + label {
-      span {
-        opacity: 0;
-        top: 50%;
-      }
-      span:first-child {
-        opacity: 1;
-        transform: rotate(405deg);
-      }
-      span:last-child {
-        opacity: 1;
-        transform: rotate(-405deg);
-      }
-    }
-
-    //nav when opened
-    input ~ nav {
-      background: white;
-      height: 50px;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      transition: .5s;
-      transition-delay: .5s;
-      z-index: 3;
-      > ul {
-        text-align: center;
-        position: absolute;
-        top: 25%;
-        left: 20%;
-        right: 20%;
-        padding: 0;
+      text-align: center;
+      position: absolute;
+      top: 25%;
+      left: 20%;
+      right: 20%;
+      padding: 0;
+    > li {
         @include pm {
-          display: flex;
-          flex-direction: row;
-          align-items: center;
-          justify-content: space-between;
-        }
-        > li {
-          @include pm {
-            opacity: 1;
-          }
-          list-style-type: none;
-          opacity: 0;
-          transition: .3s;
-          transition-delay: 0s;
-          > a {
-            text-decoration: none;
-            text-transform: uppercase;
-            font-size: 20px;
-            color: black;
-            font-weight: 700;
-            display: block;
-            padding: 30px;
-            &:hover {
-              opacity: .35;
-            }
-          }
-        }
-      }
-    }
-
-    //nav when checked transition
-    input:checked ~ nav {
-      height: 100%;
-      transition-delay: 0s;
-      > ul {
-        > li {
           opacity: 1;
-          transition-delay: .5s;
         }
+        list-style-type: none;
+        opacity: 0;
+        transition: .3s;
+        transition-delay: 0s;
+      > a {
+          text-decoration: none;
+          text-transform: uppercase;
+          font-size: 20px;
+          color: black;
+          font-weight: 700;
+          display: block;
+          padding: 30px;
+          &:hover {
+            opacity: .35;
+          }
       }
     }
+  }
+}
 
-
-    main {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      grid-auto-rows: 1fr;
-
+//nav when checked transition
+input:checked ~ nav {
+  height: 100%;
+  transition-delay: 0s;
+  > ul {
+    > li {
+      opacity: 1;
+      transition-delay: .5s;
     }
+  }
+}
 
-    footer {
-      height: 40vh;
-      display: flex;
-      justify-content: center;
-      align-items: flex-end;
-      margin-bottom: 50px;
-    }
+//main grid
+main {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  grid-auto-rows: 1fr;
+
+}
+//footer
+footer {
+  height: 40vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  margin-bottom: 50px;
+}
