--- a/stylesheets/css/app.css
+++ b/stylesheets/css/app.css
@@ -1,35 +1,54 @@
 @import url("https://fonts.googleapis.com/css?family=Abel");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i");
-.home-intro {
+.aboutParagraphs {
   display: flex;
+  flex-direction: column;
+  margin: 0 50px;
+  color: grey;
+  font-weight: 300; }
+
+.aboutImg {
+  display: flex;
+  justify-content: center;
+  margin: 150px auto 50px auto; }
+  .aboutImg img {
+    height: 65%;
+    width: 65%; }
+
+.home-intro {
   align-items: center;
+  display: flex;
   justify-content: space-between;
   margin: 150px 40px; }
   @media (min-width: 650px) {
     .home-intro {
       margin: 200px 100px; } }
-  @media (min-width: 990px) {
-    .home-intro {
-      margin: 250px 150px; } }
   @media (min-width: 1100px) {
     .home-intro {
-      margin: 300px 200px; } }
+      margin: 260px 200px; } }
   @media (min-width: 1442px) {
     .home-intro {
-      margin: 350px 250px; } }
+      margin: 280px 300px; } }
   .home-intro p {
-    text-align: center;
-    font-size: 80%;
-    font-weight: 700; }
+    font-size: 130%;
+    font-weight: 700;
+    line-height: 30px;
+    text-align: center; }
+    @media (min-width: 990px) {
+      .home-intro p {
+        font-size: 190%;
+        line-height: 35px; } }
     @media (min-width: 1100px) {
       .home-intro p {
-        font-size: 110%; } }
+        font-size: 240%;
+        line-height: 45px; } }
+    @media (min-width: 1442px) {
+      .home-intro p {
+        font-size: 270%;
+        line-height: 55px; } }
 
 .name-row1, .name-row2, .name-row3, .name-row4 {
-  display: none; }
-
-.image-row2, .image-row3, .image-row4 {
   display: none; }
 
 .image-row1, .image-row3 {
@@ -38,14 +57,20 @@
   justify-content: space-around;
   margin: 0 5px; }
   .image-row1 img, .image-row3 img {
-    width: 23em;
     height: 23em;
-    margin-bottom: 17px; }
+    margin-bottom: 17px;
+    width: 23em; }
     @media (min-width: 650px) {
       .image-row1 img, .image-row3 img {
         width: calc(51% - 2vw);
         height: calc(51% - 2vw);
         margin-bottom: 8px; } }
+    .image-row1 img:hover, .image-row3 img:hover {
+      opacity: .5;
+      transition: opacity .5s ease-out;
+      -moz-transition: opacity .5s ease-out;
+      -webkit-transition: opacity .5s ease-out;
+      -o-transition: opacity .5s ease-out; }
 
 .image-row2, .image-row4 {
   display: flex;
@@ -54,7 +79,7 @@
   margin: 0 10px 10px 10px; }
   @media (min-width: 650px) {
     .image-row2, .image-row4 {
-      background-color: grey; } }
+      background-color: black; } }
   .image-row2 img, .image-row4 img {
     width: 23em;
     height: 23em;
@@ -64,9 +89,15 @@
         width: calc(51% - 2vw);
         height: calc(51% - 2vw);
         margin-bottom: 0px; } }
+    .image-row2 img:hover, .image-row4 img:hover {
+      opacity: .5;
+      transition: opacity .5s ease-out;
+      -moz-transition: opacity .5s ease-out;
+      -webkit-transition: opacity .5s ease-out;
+      -o-transition: opacity .5s ease-out; }
 
 html, body {
-  background-color: white;
+  background-color: #FAFAFA;
   height: 100%;
   width: 100%;
   overflow-x: hidden;
@@ -90,14 +121,16 @@ a {
   display: none; }
 
 .myNameDesktop {
-  display: none; }
+  display: none;
+  font-size: 20px;
+  margin: 25px 0; }
   @media (min-width: 650px) {
     .myNameDesktop {
       display: flex; } }
 
 .myNameMobile {
-  font-size: 23px;
-  margin: 22px auto;
+  font-size: 20px;
+  margin: 23px auto;
   text-align: center; }
   @media (min-width: 650px) {
     .myNameMobile {
@@ -144,8 +177,9 @@ input:checked + label span:last-child {
   transform: rotate(-405deg); }
 
 input ~ nav {
-  background: white;
-  height: 50px;
+  background: #FAFAFA;
+  box-shadow: 0 0 20px 1px #FAFAFA;
+  height: 70px;
   position: fixed;
   top: 0;
   left: 0;
@@ -157,7 +191,8 @@ input ~ nav {
     input ~ nav .desktopMenu {
       align-items: center;
       display: flex;
-      justify-content: space-between; } }
+      justify-content: space-between;
+      background-color: #FAFAFA; } }
   input ~ nav .desktopMenu a {
     display: none;
     margin: 0 40px; }
@@ -207,51 +242,65 @@ footer {
   align-items: flex-end;
   margin-bottom: 50px; }
 
-.home-intro {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  grid-column: 3/ 11;
-  grid-row: 7/ 11;
-  font-size: 175%;
-  font-weight: 700; }
+.bodyFadeIn-appear {
+  opacity: 0.01; }
 
-.home-row1 {
-  grid-column: 2 / -2;
-  grid-row: 19 / 27;
-  display: flex;
-  justify-content: space-around; }
-  .home-row1 img {
-    width: 20em;
-    height: 20em; }
-    .home-row1 img:hover {
-      opacity: .5; }
+.bodyFadeIn-appear.bodyFadeIn-appear-active {
+  opacity: 1;
+  transition: opacity .5s ease-in; }
 
-.home-name-row1 {
-  grid-column: 2 / -2;
-  grid-row: 19 / 27;
-  display: flex;
-  justify-content: space-around;
-  align-items: center; }
+.fadeIn {
+  -webkit-animation: fadeIn 1s;
+  -moz-animation: fadeIn 1s;
+  -o-animation: fadeIn 1s;
+  animation: fadeIn 1s; }
 
-.home-row2 {
-  grid-column: 2 / -2;
-  grid-row: 29/ 37;
-  display: flex;
-  justify-content: space-around; }
-  .home-row2 img {
-    width: 20em;
-    height: 20em; }
-    .home-row2 img:hover {
-      opacity: .5; }
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@-moz-keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@-o-keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+.fadeOut {
+  -webkit-animation: fadeOut 1s;
+  -moz-animation: fadeOut 1s;
+  -o-animation: fadeOut 1s;
+  animation: fadeOut 1s; }
 
-.home-name-row2 {
-  grid-column: 2 / -2;
-  grid-row: 29/ 37;
-  display: flex;
-  justify-content: space-around;
-  align-items: center; }
-
+@-webkit-keyframes fadeOut {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
+@-moz-keyframes fadeOut {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
+@-o-keyframes fadeOut {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
+@keyframes fadeOut {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
 .aboutParagraph {
   display: flex;
   flex-direction: column;
