--- a/stylesheets/sass/partials/_header_body_footer.scss
+++ b/stylesheets/sass/partials/_header_body_footer.scss
@@ -26,7 +26,6 @@ a {
 }
 .aboutActive {
   color: $font-color;
-  display: none;
 }
 
 //name on desktop vs. mobile
@@ -80,6 +79,7 @@ label:hover {
 
 //hamburger when checked
 input:checked + label {
+  @include pm {display: none;}
   span {
     opacity: 0;
     top: 50%;
@@ -109,6 +109,7 @@ input ~ nav {
       margin: 0 40px;
     }
   }
+  @include pm {background: transparent; box-shadow: none;}
   background: #FAFAFA;
   box-shadow: 0 0 20px 1px #FAFAFA;
   height: 70px;
@@ -136,6 +137,7 @@ input ~ nav {
         transition: .3s;
         transition-delay: 0s;
       > a {
+
           text-decoration: none;
           text-transform: uppercase;
           font-size: 20px;
@@ -144,7 +146,8 @@ input ~ nav {
           display: block;
           padding: 30px;
           &:hover {
-            opacity: .35;
+            transition: .7s;
+            color: $red;
           }
       }
     }
