--- a/stylesheets/sass/partials/_work.scss
+++ b/stylesheets/sass/partials/_work.scss
@@ -19,9 +19,10 @@
         font-size: 270%;
         line-height: 55px;
       }
-      font-size: 130%;
+      color: #282828;
+      font-size: 180%;
       font-weight: $font-bold;
-      line-height: 30px;
+      line-height: 35px;
       text-align: center;
     }
 }
