--- a/stylesheets/css/app.css
+++ b/stylesheets/css/app.css
@@ -4,17 +4,31 @@
 .aboutParagraphs {
   display: flex;
   flex-direction: column;
-  margin: 0 50px;
+  margin: 5vw 10vw;
   color: grey;
   font-weight: 300; }
+  .aboutParagraphs p > span {
+    color: #FF4225; }
+  .aboutParagraphs button {
+    border-radius: 22px;
+    border: 2px solid #FF4225;
+    color: #FF4225;
+    font-size: 15px;
+    background: transparent;
+    padding: 10px;
+    margin: 20px 150px 0px 0px; }
+    .aboutParagraphs button:hover {
+      transition: .7s;
+      background-color: #FF4225;
+      color: white; }
 
 .aboutImg {
   display: flex;
   justify-content: center;
   margin: 150px auto 50px auto; }
   .aboutImg img {
-    height: 65%;
-    width: 65%; }
+    height: calc(300px + 17vw);
+    width: calc(270px + 17vw); }
 
 .home-intro {
   align-items: center;
@@ -31,9 +45,10 @@
     .home-intro {
       margin: 280px 300px; } }
   .home-intro p {
-    font-size: 130%;
+    color: #282828;
+    font-size: 180%;
     font-weight: 700;
-    line-height: 30px;
+    line-height: 35px;
     text-align: center; }
     @media (min-width: 990px) {
       .home-intro p {
@@ -117,8 +132,7 @@ a {
   color: black; }
 
 .aboutActive {
-  color: black;
-  display: none; }
+  color: black; }
 
 .myNameDesktop {
   display: none;
@@ -166,6 +180,9 @@ input + label {
 label:hover {
   opacity: .35; }
 
+@media (min-width: 650px) {
+  input:checked + label {
+    display: none; } }
 input:checked + label span {
   opacity: 0;
   top: 50%; }
@@ -199,6 +216,10 @@ input ~ nav {
     @media (min-width: 650px) {
       input ~ nav .desktopMenu a {
         display: flex; } }
+  @media (min-width: 650px) {
+    input ~ nav {
+      background: transparent;
+      box-shadow: none; } }
   input ~ nav > ul {
     text-align: center;
     position: absolute;
@@ -226,7 +247,8 @@ input ~ nav {
         display: block;
         padding: 30px; }
         input ~ nav > ul > li > a:hover {
-          opacity: .35; }
+          transition: .7s;
+          color: #FF4225; }
 
 input:checked ~ nav {
   height: 100%;
