--- a/stylesheets/css/app.css
+++ b/stylesheets/css/app.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Abel");
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700");
 @import url("https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i,900,900i");
+@import url("https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i|Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i");
 .aboutParagraphs {
   display: flex;
   flex-direction: column;
@@ -40,15 +41,14 @@
   margin: 150px 40px; }
   @media (min-width: 650px) {
     .home-intro {
-      margin: 200px 100px; } }
+      margin: 180px 100px; } }
   @media (min-width: 1100px) {
     .home-intro {
-      margin: 260px 200px; } }
+      margin: 240px 200px; } }
   @media (min-width: 1442px) {
     .home-intro {
-      margin: 280px 300px; } }
+      margin: 260px 300px; } }
   .home-intro p {
-    color: #282828;
     font-size: 180%;
     font-weight: 700;
     line-height: 35px;
@@ -120,7 +120,10 @@ html, body {
   width: 100%;
   overflow-x: hidden;
   margin: 0;
-  padding: 0; }
+  padding: 20px 0 0 0; }
+  @media (min-width: 650px) {
+    html, body {
+      padding: 25px 0 0 0; } }
 
 * {
   font-family: "Lato"; }
@@ -140,7 +143,7 @@ a {
 .myNameDesktop {
   display: none;
   font-size: 20px;
-  margin: 25px 0; }
+  margin: 35px 0; }
   @media (min-width: 650px) {
     .myNameDesktop {
       display: flex; } }
@@ -198,8 +201,8 @@ input:checked + label span:last-child {
 
 input ~ nav {
   background: #FAFAFA;
-  box-shadow: 0 0 20px 1px #FAFAFA;
-  height: 70px;
+  box-shadow: 0 0 50px 10px #FAFAFA;
+  height: 80px;
   position: fixed;
   top: 0;
   left: 0;
@@ -215,14 +218,10 @@ input ~ nav {
       background-color: #FAFAFA; } }
   input ~ nav .desktopMenu a {
     display: none;
-    margin: 0 40px; }
+    margin: 0 50px; }
     @media (min-width: 650px) {
       input ~ nav .desktopMenu a {
         display: flex; } }
-  @media (min-width: 650px) {
-    input ~ nav {
-      background: transparent;
-      box-shadow: none; } }
   input ~ nav > ul {
     text-align: center;
     position: absolute;
@@ -266,6 +265,34 @@ footer {
   justify-content: center;
   align-items: flex-end;
   margin-bottom: 50px; }
+
+.Work1Text {
+  display: flex;
+  flex-direction: column;
+  margin-top: 50px;
+  text-align: center; }
+  .Work1Text h1 {
+    font-family: "Merriweather", serif;
+    font-weight: 100;
+    font-size: 280%;
+    margin: 0px 0; }
+  .Work1Text h3 {
+    color: #FF4225;
+    margin: 20px 0 20px 0; }
+  .Work1Text > p {
+    color: grey;
+    font-weight: 150;
+    line-height: 30px;
+    margin: 20px auto;
+    width: calc(270px + 20vw); }
+
+.Work1Img {
+  display: flex;
+  justify-content: center;
+  margin: 250px auto 100px auto; }
+  .Work1Img img {
+    height: calc(300px + 20vw);
+    width: calc(270px + 20vw); }
 
 .bodyFadeIn-appear {
   opacity: 0.01; }
@@ -326,27 +353,6 @@ footer {
     opacity: 1; }
   to {
     opacity: 0; } }
-.aboutParagraph {
-  display: flex;
-  flex-direction: column;
-  grid-column: 7 / 12;
-  grid-row: 3 / 9;
-  font-size: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between; }
-  .aboutParagraph #firstP {
-    font-weight: 700; }
-
-.aboutImg1 {
-  display: flex;
-  justify-content: center;
-  grid-column: 2 / 7;
-  grid-row: 3 / 9; }
-  .aboutImg1 img {
-    height: 25em;
-    width: 25em; }
-
 .contactParagraph {
   display: flex;
   align-items: center;
