--- a/stylesheets/sass/app.scss
+++ b/stylesheets/sass/app.scss
@@ -5,6 +5,7 @@
 @import 'partials/work';
 @import 'partials/header_body_footer';
 @import 'partials/work1';
+@import 'partials/work2';
 
 
 //on page load
